no inactive logout and fix sidebar overflow issues

--- a/projects/app/src/app/layouts/components/sidebar/sidebar.css
+++ b/projects/app/src/app/layouts/components/sidebar/sidebar.css
@@ -45,7 +45,7 @@
   color: var(--tr-text);
   background: transparent;
   padding: 0.75rem;
-  overflow: hidden;
+  overflow: visible;
   box-sizing: border-box;
   transition:
     width 220ms ease-in-out,
@@ -74,6 +74,7 @@
 :host ::ng-deep .tr-sidebar-menu .p-menu-list {
   display: grid;
   gap: 0.35rem;
+  padding: 0;
 }
 
 :host ::ng-deep .tr-sidebar-menu .p-menu-start {
@@ -93,7 +94,7 @@
   padding: 0.35rem;
   color: var(--tr-text);
   text-decoration: none;
-  overflow: hidden;
+  overflow: visible;
 }
 
 .sidebar__brand-label {
@@ -145,12 +146,12 @@
   display: flex;
   min-height: 3.15rem;
   align-items: center;
-  gap: 0.75rem;
+  gap: 0rem;
   border-radius: 999px;
   padding: 0.35rem;
   color: var(--tr-text-muted);
   text-decoration: none;
-  overflow: hidden;
+  overflow: visible;
   cursor: pointer;
   transition:
     background 160ms ease,
@@ -257,7 +258,7 @@
 
 .sidebar__child-badge {
   margin-left: auto;
-  opacity: 0;
+  opacity: 1;
   transition: opacity 180ms ease;
 }
 
@@ -292,6 +293,11 @@
   color: var(--tr-text-muted);
   background: transparent;
   box-shadow: none;
+}
+
+.sidebar:hover .sidebar__link,
+.sidebar:focus-within .sidebar__link {
+  gap: 0.75rem;
 }
 
 .sidebar:not(:hover):not(:focus-within) .sidebar__link--opened .sidebar__icon {
@@ -356,13 +362,16 @@
 
 .sidebar__badge {
   margin-left: auto;
-  opacity: 0;
+  opacity: 1;
   transition: opacity 180ms ease;
+  transform: translate(-30%, -50%);
+  transition: all 300ms ease-in-out;
 }
 
 .sidebar:hover .sidebar__badge,
 .sidebar:focus-within .sidebar__badge {
   opacity: 1;
+  transform: translate(0,0);
 }
 
 .sidebar__link--active {
@@ -617,5 +626,5 @@
 }
 
 :host ::ng-deep .tr-sidebar-menu .p-menu-item-content {
-  overflow: hidden;
+  overflow: visible;
 }
